<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.phareaon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.phareaon.ui.list.ItemFragment"
        android:label="@string/menu_liste"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.phareaon.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <activity
        android:id="@+id/nav_map"
        android:name="com.example.phareaon.ui.map.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />
</navigation>